<resources>
    <string name="app_name">Prevote</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tekrar_g_nder">Tekrar Gönder</string>
    <string name="do_rula">Doğrula</string>
    <string name="telefon_numaras">Telefon Numarası</string>
    <string name="kodu_g_nder">Kodu Gönder</string>
    <string name="do_rulama">Doğrulama</string>
    <string name="do_rulama_kodu">Doğrulama Kodu</string>
</resources>